# drone_ws

./: .gitignore  Makefile  README.md  default_settings.sh  drone_config.sh  etc  requirements.txt  test_data
be/: README.md  drone_utils.py  fake_drone_system.py  mission_control_node.py  mission_control_webserver.py  mission_utils.py  pathfinder.py  requirements.txt  ros2_stub.py  run_clustering.py
be/assigner/: interface.py
be/clusterfinder/: clusterfinder.py  point.py  util.py
docs/: DRONE_IMPLEMENTATION.md  HITL_TEST.md  IMPLEMENTATION.md
fe/: package-lock.json  package.json
fe/src/: App.css  App.js  Map.js  index.js
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
setup_env/: lib.py  patch_px4.py  setup_env.py  setup_real_env.py  setup_sim_env.py
src/drone/: package.xml  setup.cfg  setup.py
src/full_launcher/: README.md  package.xml  setup.cfg  setup.py
src/mc_interface_msgs/: CMakeLists.txt  package.xml
src/mc_interface_msgs/msg/: Detected.msg  Ready.msg  Status.msg
src/mc_interface_msgs/srv/: Command.srv  Status.srv
src/mission_control/: package.xml  setup.py
src/mission_control/mission_control/: .gitignore  detection_utils.py  drone_utils.py  maplib.py  mission_control_node.py  mission_control_webserver.py  mission_utils.py  pathfinder.py  run_clustering.py
src/mission_control/mission_control/assigner/: simplequeueassigner.py
src/mission_control/mission_control/clusterfinder/: interface.py  maplib.py
src/mission_control/static/: index.html
src/mission_control/static/js/: main.js
src/sensor_node/: setup.cfg  (+2 more)
tools/: lib.py  patch_px4.py  px4-rc.simulator  setup_env.py  setup_real_env.py  setup_sim_env.py  sim_generator.py
worlds/: README.md  SUTD_field.sdf  parse_rel_paths.py  schfield.sdf
(+49 files in other folders)
