<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_control</name>
  <version>0.0.0</version>
  <description>Mission Control. Handles communications with the drone and provides the user interface.</description>
  <maintainer email="ryantoh99@gmail.com">rye</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>h3</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
